--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "Repo with all my dioxus apps as I build them"
 categories = []
 version = "0.1.0"
 repository = "https://github.com/gazure/monorepo"
-edition = "2024"
+edition = "2021"
 rust-version = "1.88"
 keywords = []
 license = "MIT"
@@ -16,7 +16,8 @@ license = "MIT"
 [workspace.dependencies]
 # Common Dioxus dependencies that can be shared across projects
 anyhow = "1.0.86"
-chrono = "0.4.38"
+chrono = { version = "0.4.38", features = ["wasmbind"] }
+console_error_panic_hook = "0.1"
 dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
 fastrand = "2.3.0"
 serde_json = "1.0"
