--- a/lib/start/Cargo.toml
+++ b/lib/start/Cargo.toml
@@ -14,3 +14,6 @@ license.workspace = true
 dioxus = { workspace = true }
 tracing = { workspace = true }
 tracingx = { path = "../tracingx" }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = {workspace = true}
