--- a/gsazure/Dioxus.toml
+++ b/gsazure/Dioxus.toml
@@ -9,7 +9,7 @@ title = "gsazure"
 [web.resource]
 
 # Additional CSS style files
-style = ["assets/tailwind.css"]
+style = []
 
 # Additional JavaScript files
 script = []
