--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,15 @@ license = "MIT"
 [workspace.dependencies]
 # Common Dioxus dependencies that can be shared across projects
 anyhow = "1.0.86"
+axum = "0.8.4"
 chrono = { version = "0.4.38", features = ["wasmbind"] }
 console_error_panic_hook = "0.1"
 dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
 fastrand = "2.3.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
+tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 uuid = { version = "1.0", features = ["v4", "js"] }
