--- a/christmas/Cargo.toml
+++ b/christmas/Cargo.toml
@@ -7,10 +7,17 @@ edition = "2024"
 
 [dependencies]
 anyhow = { workspace = true }
+axum = { workspace = true, optional = true }
 chrono = { workspace = true, features = ["wasmbind"] }
 dioxus = { workspace = true, features = ["router", "fullstack"] }
 fastrand = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_yaml = { workspace = true }
 start = { path = "../lib/start" }
+thiserror = "2.0.12"
+tracing = { workspace = true }
+tracingx = { path = "../lib/tracingx" }
+tokio = { workspace = true, features = ["full"], optional = true }
 
 [[bin]]
 name = "christmas"
@@ -23,5 +30,6 @@ path = "src/lib.rs"
 [features]
 default = ["web"]
 web = ["dioxus/web"]
+server = ["dioxus/server", "dep:axum", "dep:tokio"]
 desktop = ["dioxus/desktop"]
 mobile = ["dioxus/mobile"]
