--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,12 @@ chrono = { version = "0.4.38", features = ["wasmbind"] }
 console_error_panic_hook = "0.1"
 dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
 fastrand = "2.3.0"
+postgresql_embedded = { version = "0.19.0", features = ["bundled"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
+sqlx = "0.8.6"
+thiserror = "2.0.12"
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
