--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ postgresql_embedded = { version = "0.19.0", features = ["bundled"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
-sqlx = "0.8.6"
+sqlx = {version = "0.8.6", features = ["time"]}
 thiserror = "2.0.12"
 tokio = { version = "1.0", features = ["full"] }
 tracing = "0.1"
