--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ members = [
     "christmas",
     "gsazure",
     "lib/*",
+    "baseball",
+    "twotris",
     "arenabuddy/arenabuddy",
     "arenabuddy/arenabuddy_cli",
     "arenabuddy/arenabuddy_core",
@@ -25,13 +27,15 @@ license = "MIT"
 [workspace.dependencies]
 anyhow = "1.0.98"
 axum = "0.8.4"
+bevy = { version = "0.16.1", features = ["file_watcher"] }
+bevy-inspector-egui = "0.31.0"
 chrono = { version = "0.4.41", features = ["serde", "wasmbind"] }
 clap = { version = "4.5.41", features = ["derive"] }
 console_error_panic_hook = "0.1"
 csv = { version = "1.3.1" }
 ctrlc = "3.4.7"
 derive_builder = "0.20.2"
-dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
+dioxus = { version = "0.7.0-alpha.3", features = ["router", "desktop", "fullstack"] }
 fastrand = "2.3.0"
 indoc = "2.0.6"
 include_dir = "0.7.4"
@@ -45,12 +49,14 @@ postgresql_embedded = { version = "0.19.0", features = ["bundled"] }
 prost = "0.13"
 prost-build = "0.13"
 prost-types = "0.13"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
 regex = "1.11.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serde_yaml = "0.9"
 serde-wasm-bindgen = "0.6"
-sqlx = { version = "0.8.6", features = ["chrono", "uuid"] }
+sqlx = { version = "0.8.6", features = ["chrono", "uuid", "postgres"] }
 thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["full"] }
 tracing = "0.1.41"
@@ -70,6 +76,10 @@ opt-level = 0
 [profile.release]
 opt-level = 3
 lto = true
+
+# Enable high optimizations for Bevy
+[profile.dev.package.bevy]
+opt-level = 3
 
 [profile.wasm-dev]
 inherits = "dev"
