--- a/arenabuddy/arenabuddy_ui/Cargo.toml
+++ b/arenabuddy/arenabuddy_ui/Cargo.toml
@@ -11,18 +11,30 @@ license.workspace = true
 
 
 [dependencies]
+anyhow = { workspace = true }
 arenabuddy_core = { path = "../arenabuddy_core/" }
-dioxus = { workspace = true, features = ["router"] }
-console_error_panic_hook = { workspace = true }
-wasm-bindgen = { workspace = true }
-wasm-bindgen-futures = { workspace = true }
+arenabuddy_data = { path = "../arenabuddy_data" }
+axum = { workspace = true, optional = true}
+chrono = { workspace = true }
+dioxus = { workspace = true, features = ["router", "desktop", "fullstack"] }
+itertools = { workspace = true }
+notify = { workspace = true }
+open = "5.0"
+postgresql_embedded = { workspace = true, features = ["bundled"] }
+rfd = "0.14"
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
-serde-wasm-bindgen = { workspace = true }
+start = { path = "../../lib/start"}
+tokio = { workspace = true, optional = true, features = ["full"] }
+tracing = { workspace = true }
+tracingx = { path = "../../lib/tracingx" }
+tracing-subscriber = { workspace = true }
+tracing-appender = { workspace = true }
 
 [lints]
 workspace = true
 
 [features]
-default = ["web"]
-web = ["dioxus/web"]
+default = ["desktop"]
+desktop = ["dioxus/desktop"]
+server = ["dioxus/server", "dep:tokio"]
