--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ members = [
     "lib/*",
     "baseball",
     "twotris",
-    "arenabuddy/arenabuddy",
     "arenabuddy/arenabuddy_cli",
     "arenabuddy/arenabuddy_core",
     "arenabuddy/arenabuddy_data",
@@ -15,7 +14,7 @@ resolver = "3"
 
 [workspace.package]
 authors = ["Grant Azure <azure.grant@gmail.com>"]
-description = "Repo with all my dioxus apps as I build them"
+description = "Repo with all my rust apps as I build them"
 categories = []
 version = "0.1.0"
 repository = "https://github.com/gazure/monorepo"
@@ -35,7 +34,11 @@ console_error_panic_hook = "0.1"
 csv = { version = "1.3.1" }
 ctrlc = "3.4.7"
 derive_builder = "0.20.2"
-dioxus = { version = "0.7.0-alpha.3", features = ["router", "desktop", "fullstack"] }
+dioxus = { version = "0.7.0-alpha.3", features = [
+    "router",
+    "desktop",
+    "fullstack",
+] }
 fastrand = "2.3.0"
 indoc = "2.0.6"
 include_dir = "0.7.4"
@@ -47,7 +50,7 @@ leptos_router = { version = "0.8.3", features = ["tracing"] }
 notify = "8.0.0"
 postgresql_embedded = { version = "0.19.0", features = ["bundled"] }
 prost = "0.13"
-prost-build = "0.13"
+prost-build = { version = "0.13", features = ["format"] }
 prost-types = "0.13"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
@@ -56,7 +59,13 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 serde_yaml = "0.9"
 serde-wasm-bindgen = "0.6"
-sqlx = { version = "0.8.6", features = ["chrono", "uuid", "postgres"] }
+sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "release/0.9.0-alpha.1", features = [
+    "chrono",
+    "uuid",
+    "postgres",
+    "runtime-tokio",
+    "sqlx-toml",
+] }
 thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["full"] }
 tracing = "0.1.41"
