--- a/arenabuddy/arenabuddy_core/Cargo.toml
+++ b/arenabuddy/arenabuddy_core/Cargo.toml
@@ -12,7 +12,7 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-prost-build = { workspace = true }
+prost-build = { workspace = true , features = ["format"]}
 
 [dependencies]
 chrono = { workspace = true, features = ["serde"] }
