--- a/twotris/Cargo.toml
+++ b/twotris/Cargo.toml
@@ -11,7 +11,7 @@ keywords.workspace = true
 license.workspace = true
 
 [dependencies]
-bevy = "0.14.1"
+bevy = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 rand = {workspace = true}
