--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,13 +16,35 @@ jobs:
     - name: Install Rust
       uses: dtolnay/rust-toolchain@stable
 
-    - name: Install protoc
+    - name: Install system dependencies for Bevy, Tauri, and GUI libraries
       run: |
         sudo apt-get update
-        sudo apt-get install -y protobuf-compiler
+        sudo apt-get install -y \
+          curl \
+          file \
+          libglib2.0-dev \
+          libasound2-dev \
+          libayatana-appindicator3-dev \
+          libgtk-3-dev \
+          libcairo2-dev \
+          libpango1.0-dev \
+          libgdk-pixbuf2.0-dev \
+          libatk1.0-dev \
+          librsvg2-dev \
+          libsoup-3.0-dev \
+          libssl-dev \
+          libudev-dev \
+          libxdo-dev \
+          libwebkit2gtk-4.1-dev \
+          pkg-config \
+          protobuf-compiler \
+          wget
+
+    - name: install cargo binstall
+      uses: cargo-bins/cargo-binstall@main
 
     - name: Install Dioxus CLI
-      run: cargo install dioxus-cli
+      run: cargo binstall dioxus-cli --version 0.7.0-alpha.3 --locked
 
     - name: Cache cargo registry
       uses: actions/cache@v3
@@ -33,5 +55,8 @@ jobs:
           target
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-    - name: Cargo check
-      run: cargo check --all
+    - name: check
+      run: cargo check --workspace --all-targets --all-features
+
+    - name: clippy
+      run: cargo clippy --all --all-targets --all-features --examples --tests
