--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ itertools = "0.14.0"
 js-sys = "0.3"
 lazy_static = "1.5.0"
 notify = "8.2.0"
+open = "5.3"
 postgresql_embedded = { version = "0.19.0", features = ["bundled"] }
 prost = "0.13"
 prost-build = { version = "0.13", features = ["format"] }
@@ -53,6 +54,7 @@ prost-types = "0.13"
 rand = "0.9.2"
 rand_chacha = "0.9.0"
 regex = "1.11.1"
+rfd = "0.14"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 serde_yaml = "0.9"
