[arenabuddy] cleanup last remnants of tauri, use workspace fmt config
also small attempt to make the readme legible again

--- a/arenabuddy/arenabuddy/Cargo.toml
+++ b/arenabuddy/arenabuddy/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "arenabuddy_ui"
+name = "arenabuddy"
 description = "UI for arenabuddy"
 authors.workspace = true
 categories.workspace = true
