--- a/arenabuddy/arenabuddy_cli/Cargo.toml
+++ b/arenabuddy/arenabuddy_cli/Cargo.toml
@@ -10,7 +10,6 @@ repository.workspace = true
 version.workspace = true
 
 [dependencies]
-anyhow = { workspace = true }
 arenabuddy_core = { path = "../arenabuddy_core" }
 arenabuddy_data = { path = "../arenabuddy_data" }
 clap = { workspace = true }
@@ -22,6 +21,7 @@ rustyline = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
+thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 urlencoding = { workspace = true }
