--- a/arenabuddy/arenabuddy/Cargo.toml
+++ b/arenabuddy/arenabuddy/Cargo.toml
@@ -25,6 +25,7 @@ rfd = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 start = { path = "../../lib/start" }
+thiserror = { workspace = true }
 tokio = { workspace = true, optional = true, features = ["full"] }
 tracing = { workspace = true }
 tracingx = { path = "../../lib/tracingx" }
