[monorepo] add console-subscriber dependency to workspace

--- a/arenabuddy/arenabuddy/Cargo.toml
+++ b/arenabuddy/arenabuddy/Cargo.toml
@@ -15,6 +15,7 @@ arenabuddy_core = { path = "../arenabuddy_core/" }
 arenabuddy_data = { path = "../arenabuddy_data" }
 axum = { workspace = true, optional = true }
 chrono = { workspace = true }
+console-subscriber = { workspace = true, optional = true }
 dioxus = { workspace = true, features = ["router", "desktop", "fullstack"] }
 itertools = { workspace = true }
 notify = { workspace = true }
@@ -25,7 +26,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 start = { path = "../../lib/start" }
 thiserror = { workspace = true }
-tokio = { workspace = true, optional = true, features = ["full"] }
+tokio = { workspace = true, optional = true, features = ["full", "tracing"] }
 tracing = { workspace = true }
 tracingx = { path = "../../lib/tracingx" }
 tracing-subscriber = { workspace = true }
@@ -38,3 +39,4 @@ workspace = true
 default = ["desktop"]
 desktop = ["dioxus/desktop"]
 server = ["dioxus/server", "dep:tokio"]
+serverdebug = ["server", "dep:console-subscriber"]
