--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ bevy-inspector-egui = "0.31.0"
 chrono = { version = "0.4.41", features = ["serde", "wasmbind"] }
 clap = { version = "4.5.43", features = ["derive"] }
 console_error_panic_hook = "0.1"
+console-subscriber = "0.4.1"
 csv = { version = "1.3.1" }
 ctrlc = "3.4.7"
 derive_builder = "0.20.2"
@@ -63,7 +64,7 @@ sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "release/0.9.0-al
     "sqlx-toml",
 ] }
 thiserror = "2.0.12"
-tokio = { version = "1.47.1", features = ["full"] }
+tokio = { version = "1.47.1", features = ["full", "tracing"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.3"
