[arenabuddy] add debug through tokio console through console layer

--- a/arenabuddy/arenabuddy/Cargo.toml
+++ b/arenabuddy/arenabuddy/Cargo.toml
@@ -39,4 +39,4 @@ workspace = true
 default = ["desktop"]
 desktop = ["dioxus/desktop"]
 server = ["dioxus/server", "dep:tokio"]
-serverdebug = ["server", "dep:console-subscriber"]
+serverdebug = ["dep:console-subscriber"]
