--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ console-subscriber = "0.4.1"
 csv = { version = "1.3.1" }
 ctrlc = "3.4.7"
 derive_builder = "0.20.2"
-dioxus = { version = "0.7.0-alpha.3", features = [
+dioxus = { version = "0.7.0-rc.0", features = [
     "router",
     "desktop",
     "fullstack",
