[arenabuddy] include cards-full.pb resource

--- a/arenabuddy/arenabuddy/Dioxus.toml
+++ b/arenabuddy/arenabuddy/Dioxus.toml
@@ -2,7 +2,9 @@
 
 [web.app]
 title = "Arenabuddy"
+
 [bundle]
 identifier = "com.gazure.arenabuddy.dev"
 publisher = "Grant Azure"
 icon = ["arenabuddy/assets/icon.png"]
+resources = ["arenabuddy/data/cards-full.pb"]
