--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,7 @@
 /data
 
 # ignore bazel for when I get ambitious and try to test out rules_rust
-/bazel*
+# Ignore all bazel-* symlinks. There is no full list since this can change
+# based on the name of the directory bazel is cloned into.
+/bazel-*
+/output/
