--- a/lib/start/Cargo.toml
+++ b/lib/start/Cargo.toml
@@ -11,9 +11,12 @@ keywords.workspace = true
 license.workspace = true
 
 [dependencies]
-dioxus = { workspace = true }
+dioxus = { workspace = true}
 tracing = { workspace = true }
 tracingx = { path = "../tracingx" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = {workspace = true}
+
+[target.wasm32-unknown-unknown]
+rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
