--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,6 @@ ctrlc = "3.4.7"
 derive_builder = "0.20.2"
 dioxus = { version = "0.7.0-rc.0", features = [
     "router",
-    "desktop",
     "fullstack",
 ] }
 fastrand = "2.3.0"
@@ -68,7 +67,7 @@ tokio = { version = "1.47.1", features = ["full", "tracing"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.3"
-reqwest = { version = "0.12.23", features = ["json", "stream"] }
+reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls"] }
 rustyline = "16.0.0"
 urlencoding = "2.1.3"
 uuid = { version = "1.18.0", features = ["v4", "js"] }
