--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "arenabuddy/arenabuddy_cli",
     "arenabuddy/arenabuddy_core",
     "arenabuddy/arenabuddy_data",
+    "arenabuddy/arenabuddy_backend",
     "arenabuddy/arenabuddy",
 ]
 resolver = "3"
@@ -25,6 +26,7 @@ license = "MIT"
 
 [workspace.dependencies]
 anyhow = "1.0.99"
+async-stream = "0.3.6"
 axum = "0.8.4"
 bevy = { version = "0.16.1", features = ["file_watcher"] }
 bevy-inspector-egui = "0.31.0"
@@ -35,19 +37,17 @@ console-subscriber = "0.4.1"
 csv = { version = "1.3.1" }
 ctrlc = "3.4.7"
 derive_builder = "0.20.2"
-dioxus = { version = "0.7.0-rc.0", features = [
-    "router",
-    "fullstack",
-] }
+dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
+dotenv = "0.15.0"
 fastrand = "2.3.0"
 indoc = "2.0.6"
 itertools = "0.14.0"
 notify = "8.2.0"
 open = "5.3"
 postgresql_embedded = { version = "0.19.0", features = ["bundled"] }
-prost = "0.13"
-prost-build = { version = "0.13", features = ["format"] }
-prost-types = "0.13"
+prost = "0.14.1"
+prost-build = { version = "0.14.1", features = ["format"] }
+prost-types = "0.14.1"
 rand = "0.9.2"
 rand_chacha = "0.9.0"
 regex = "1.11.2"
@@ -64,6 +64,9 @@ sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "release/0.9.0-al
 ] }
 thiserror = "2.0.16"
 tokio = { version = "1.47.1", features = ["full", "tracing"] }
+tonic = { version = "0.14.1"}
+tonic-prost = { version = "0.14.1"}
+tonic-prost-build = { version = "0.14.1"}
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.3"
