[baseball] use tracingx

--- a/baseball/baseball_game_rules/Cargo.toml
+++ b/baseball/baseball_game_rules/Cargo.toml
@@ -11,4 +11,4 @@ keywords.workspace = true
 license.workspace = true
 
 [dependencies]
-tracing = { workspace = true }
+tracingx = {path = "../../lib/tracingx"}
