--- a/baseball/Cargo.toml
+++ b/baseball/Cargo.toml
@@ -14,5 +14,4 @@ license.workspace = true
 baseball_game_rules = { path = "./baseball_game_rules"}
 bevy = { workspace = true, features = ["file_watcher"] }
 bevy-inspector-egui = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
+tracingx = {path = "../lib/tracingx"}
