--- a/arenabuddy/arenabuddy_cli/Cargo.toml
+++ b/arenabuddy/arenabuddy_cli/Cargo.toml
@@ -22,8 +22,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 thiserror = { workspace = true }
-tracing = { workspace = true }
-tracing-subscriber = { workspace = true }
+tracingx = { path = "../../lib/tracingx"}
 urlencoding = { workspace = true }
 
 [[bin]]
