--- a/arenabuddy/arenabuddy_core/Cargo.toml
+++ b/arenabuddy/arenabuddy_core/Cargo.toml
@@ -28,7 +28,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
-tracing = { workspace = true }
+tracingx = { path = "../../lib/tracingx"}
 notify = { workspace = true}
 
 [features]
