--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,10 +37,7 @@ console-subscriber = "0.4.1"
 csv = { version = "1.3.1" }
 ctrlc = "3.4.7"
 derive_builder = "0.20.2"
-dioxus = { version = "0.7.0-rc.0", features = [
-    "router",
-    "fullstack",
-] }
+dioxus = { version = "0.7.0-rc.0"}
 fastrand = "2.3.0"
 indoc = "2.0.6"
 itertools = "0.14.0"
