--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,13 +29,13 @@ anyhow = "1.0.99"
 async-trait = "0.1"
 axum = "0.8.4"
 bevy = { version = "0.16.1", features = ["file_watcher"] }
-bevy-inspector-egui = "0.31.0"
-chrono = { version = "0.4.41", features = ["serde", "wasmbind"] }
+bevy-inspector-egui = "0.33.1"
+chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
 clap = { version = "4.5.47", features = ["derive"] }
 console_error_panic_hook = "0.1"
 console-subscriber = "0.4.1"
 csv = { version = "1.3.1" }
-ctrlc = "3.4.7"
+ctrlc = "3.5.0"
 derive_builder = "0.20.2"
 dioxus = { version = "0.7.0-rc.0"}
 fastrand = "2.3.0"
@@ -43,14 +43,14 @@ indoc = "2.0.6"
 itertools = "0.14.0"
 notify = "8.2.0"
 open = "5.3"
-postgresql_embedded = { version = "0.19.0", features = ["bundled"] }
-prost = "0.13"
-prost-build = { version = "0.13", features = ["format"] }
-prost-types = "0.13"
+postgresql_embedded = { version = "0.20.0", features = ["bundled"] }
+prost = "0.14"
+prost-build = { version = "0.14", features = ["format"] }
+prost-types = "0.14"
 rand = "0.9.2"
 rand_chacha = "0.9.0"
 regex = "1.11.2"
-rfd = "0.14"
+rfd = { version = "0.15", default-features = false }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 serde_yaml = "0.9"
@@ -67,9 +67,9 @@ tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.3"
 reqwest = { version = "0.12.23", features = ["json", "stream", "rustls-tls"] }
-rustyline = "16.0.0"
+rustyline = "17.0.1"
 urlencoding = "2.1.3"
-uuid = { version = "1.18.0", features = ["v4", "js"] }
+uuid = { version = "1.18.1", features = ["v4", "js"] }
 
 # Define common profiles for all workspace members
 [profile.dev]
