--- a/arenabuddy/arenabuddy_data/Cargo.toml
+++ b/arenabuddy/arenabuddy_data/Cargo.toml
@@ -11,7 +11,7 @@ keywords.workspace = true
 license.workspace = true
 
 [dependencies]
-arenabuddy_core = { path = "../arenabuddy_core/" }
+arenabuddy_core = { path = "../core/" }
 async-trait = { workspace = true }
 chrono = { workspace = true, features = ["serde"] }
 indoc = { workspace = true }
