[arenabuddy] rename arenabuddy_cli to cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "baseball",
     "baseball/baseball_game_rules",
     "twotris",
-    "arenabuddy/arenabuddy_cli",
+    "arenabuddy/cli",
     "arenabuddy/core",
     "arenabuddy/data",
     "arenabuddy/arenabuddy",
