--- a/baseball/Cargo.toml
+++ b/baseball/Cargo.toml
@@ -11,7 +11,7 @@ keywords.workspace = true
 license.workspace = true
 
 [dependencies]
-baseball_game_rules = { path = "./baseball_game_rules"}
+baseball_game_rules = { path = "./rules"}
 bevy = { workspace = true, features = ["file_watcher"] }
 bevy-inspector-egui = { workspace = true }
 tracingx = {path = "../lib/tracingx"}
