--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
-      - name: Install system dependencies for Bevy, Tauri, and GUI libraries
+      - name: Install system dependencies for Bevy, Dioxus, Protobuf, and GUI libraries
         run: |
           sudo apt-get update
           sudo apt-get install -y \
