--- a/arenabuddy/core/Cargo.toml
+++ b/arenabuddy/core/Cargo.toml
@@ -5,6 +5,7 @@ authors.workspace = true
 categories.workspace = true
 version.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 edition.workspace = true
 keywords.workspace = true
 license.workspace = true
