--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -12,12 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - name: Install nightly toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
           toolchain: nightly
-          override: true
           components: rustfmt
 
       - name: Check formatting
@@ -33,6 +31,8 @@ jobs:
 
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
+        with:
+          components: clippy
 
       - name: Install system dependencies for Bevy, Dioxus, Protobuf, and GUI libraries
         run: |
