--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,8 @@ license = "MIT or Apache-2.0"
 anyhow = "1.0.100"
 async-trait = "0.1"
 axum = "0.8.4"
-bevy = { version = "0.16.1", features = ["file_watcher"] }
-bevy-inspector-egui = "0.33.1"
+bevy = { version = "0.17.0", features = ["file_watcher"] }
+# bevy-inspector-egui = "0.33.1"  # Not yet compatible with Bevy 0.17
 chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
 clap = { version = "4.5.48", features = ["derive"] }
 console_error_panic_hook = "0.1"
