--- a/arenabuddy/core/Cargo.toml
+++ b/arenabuddy/core/Cargo.toml
@@ -22,6 +22,7 @@ ctrlc = { workspace = true }
 derive_builder = { workspace = true }
 indoc = { workspace = true }
 itertools = { workspace = true }
+multimap = { path = "../../lib/multimap" }
 notify = { workspace = true}
 prost = { workspace = true }
 prost-types = { workspace = true }
