--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ rfd = { version = "0.15", default-features = false }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 serde_yaml = "0.9"
-sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "release/0.9.0-alpha.1", features = [
+sqlx = { version = "0.9.0-alpha.1", features = [
     "chrono",
     "uuid",
     "postgres",
