--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ console-subscriber = "0.4.1"
 csv = { version = "1.3.1" }
 ctrlc = "3.5.0"
 derive_builder = "0.20.2"
-dioxus = { version = "0.7.0-rc.3"}
+dioxus = { version = "0.7.0"}
 fastrand = "2.3.0"
 indoc = "2.0.6"
 itertools = "0.14.0"
@@ -62,7 +62,7 @@ sqlx = { version = "0.9.0-alpha.1", features = [
     "sqlx-toml",
 ] }
 thiserror = "2.0.17"
-tokio = { version = "1.47.1", features = ["full", "tracing"] }
+tokio = { version = "1.48.0", features = ["full", "tracing"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.3"
