--- a/gsazure/Cargo.toml
+++ b/gsazure/Cargo.toml
@@ -13,7 +13,7 @@ license.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dioxus = { workspace = true, features = ["router", "fullstack"] }
+dioxus = { workspace = true, features = ["router"] }
 start = { path = "../lib/start" }
 serde_json = { workspace = true }
 uuid = { workspace = true }
