--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ ctrlc = "3.5.1"
 derive_builder = "0.20.2"
 dioxus = { version = "0.7.1"}
 fastrand = "2.3.0"
+google-sheets4 = "6.0.0"
 indoc = "2.0.7"
 itertools = "0.14.0"
 notify = "8.2.0"
