[monorepo] format cargo tomls

--- a/arenabuddy/data/Cargo.toml
+++ b/arenabuddy/data/Cargo.toml
@@ -17,7 +17,12 @@ chrono = { workspace = true, features = ["serde"] }
 indoc = { workspace = true }
 postgresql_embedded = { workspace = true, features = ["bundled"] }
 serde_json = { workspace = true }
-sqlx = { workspace = true, features = ["chrono", "uuid", "postgres", "sqlx-toml"] }
+sqlx = { workspace = true, features = [
+    "chrono",
+    "uuid",
+    "postgres",
+    "sqlx-toml",
+] }
 tokio = { workspace = true, features = ["full"] }
 thiserror = { workspace = true }
 tracingx = { path = "../../lib/tracingx" }
