--- a/arenabuddy/arenabuddy/Cargo.toml
+++ b/arenabuddy/arenabuddy/Cargo.toml
@@ -31,7 +31,10 @@ tracingx = { path = "../../lib/tracingx" }
 tracing-appender = { workspace = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
-rfd = { workspace = true, default_features = false, features = ["xdg-portal", "tokio"] }
+rfd = { workspace = true, default_features = false, features = [
+    "xdg-portal",
+    "tokio",
+] }
 
 [target.'cfg(not(target_os = "linux"))'.dependencies]
 rfd = { workspace = true }
