--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ anyhow = "1.0.100"
 async-trait = "0.1"
 axum = "0.8.8"
 bevy = { version = "0.17.3", features = ["file_watcher"] }
-# bevy-inspector-egui = "0.33.1"  # Not yet compatible with Bevy 0.17
+bevy-inspector-egui = "0.35.0"
 chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
 clap = { version = "4.5.53", features = ["derive"] }
 console_error_panic_hook = "0.1"
