--- a/arenabuddy/cli/Cargo.toml
+++ b/arenabuddy/cli/Cargo.toml
@@ -17,7 +17,7 @@ clap = { workspace = true }
 csv = { workspace = true }
 ctrlc = { workspace = true }
 prost = { workspace = true }
-reqwest = { workspace = true, features = ["json", "stream", "rustls-tls"] }
+reqwest = { workspace = true, features = ["json", "stream", "default-tls"] }
 rustyline = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
