[arenabuddy] opting to just use default embedded cards library
Could be an issue if cards size grows too large, as it may impact performance. But at <5MB it's not a huge issue

--- a/arenabuddy/arenabuddy/Dioxus.toml
+++ b/arenabuddy/arenabuddy/Dioxus.toml
@@ -6,5 +6,4 @@ title = "Arenabuddy"
 [bundle]
 identifier = "com.gazure.arenabuddy.dev"
 publisher = "Grant Azure"
-icon = ["arenabuddy/assets/icon.png"]
-resources = ["arenabuddy/data/cards-full.pb"]
+con = ["arenabuddy/assets/icon.png"]
