--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,7 +53,7 @@ rand_chacha = "0.9.0"
 regex = "1.12.2"
 rfd = { version = "0.16.0", default-features = false }
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.147"
+serde_json = "1.0.148"
 serde_yaml = "0.9"
 sqlx = { version = "0.9.0-alpha.1", features = [
     "chrono",
@@ -67,7 +67,7 @@ tokio = { version = "1.48.0", features = ["full", "tracing"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.4"
-reqwest = { version = "0.13.0-rc.1", features = ["json", "stream", "query", "default-tls"] }
+reqwest = { version = "0.13.1", features = ["json", "stream", "query", "default-tls"] }
 rustyline = "17.0.2"
 urlencoding = "2.1.3"
 uuid = { version = "1.19.0", features = ["v4", "js"] }
