--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "arenabuddy/core",
     "arenabuddy/data",
     "arenabuddy/arenabuddy",
+    "life",
 ]
 resolver = "3"
 
@@ -29,6 +30,7 @@ anyhow = "1.0.100"
 async-trait = "0.1"
 axum = "0.8.8"
 bevy = { version = "0.17.3", features = ["file_watcher"] }
+bevy_framepace = { version = "0.20.1" }
 bevy-inspector-egui = "0.35.0"
 chrono = { version = "0.4.42", features = ["serde", "wasmbind"] }
 clap = { version = "4.5.53", features = ["derive"] }
@@ -67,7 +69,12 @@ tokio = { version = "1.48.0", features = ["full", "tracing"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
 tracing-appender = "0.2.4"
-reqwest = { version = "0.13.1", features = ["json", "stream", "query", "default-tls"] }
+reqwest = { version = "0.13.1", features = [
+    "json",
+    "stream",
+    "query",
+    "default-tls",
+] }
 rustyline = "17.0.2"
 urlencoding = "2.1.3"
 uuid = { version = "1.19.0", features = ["v4", "js"] }
